# dde-calendar

calendar-basicstruct/src/: scheduledatainfo.h
calendar-client/: CMakeLists.txt
calendar-client/plugins/: CMakeLists.txt
calendar-client/plugins/google/: CMakeLists.txt  README.md
calendar-client/plugins/google/src/: plugin.cpp  plugin.h
calendar-client/plugins/google/src/bindings/: bindings.cpp  bindings.h
calendar-client/plugins/google/src/python/: calendarModule.py  gcapi_quickstart.py  pybinds.qrc
calendar-client/plugins/js/: CMakeLists.txt
calendar-client/plugins/js/plugin/: CMakeLists.txt
calendar-client/plugins/js/plugin/src/: js_plugin.cpp  js_plugin.h
calendar-client/plugins/js/plugin/src/bindings/: bindings.cpp  bindings.h  bindings.md
calendar-client/plugins/js/v8pp/: CMakeLists.txt
calendar-client/plugins/js/v8pp/v8pp/: class.hpp
calendar-client/plugins/python/: CMakeLists.txt
calendar-client/plugins/python/src/: bindings.cpp  bindings.h  main.cpp  python_plugin.cpp  python_plugin.h
calendar-client/plugins/sample/: CMakeLists.txt  sample.cpp  sample.h
calendar-client/src/: calendar_service_plugin_interface.cpp  calendar_service_plugin_interface.h  plugin_checking.cpp  plugin_checking.h
calendar-client/src/dialog/: myscheduleview.cpp  scheduledlg.cpp
calendar-client/src/scheduleTask/: cscheduledbus.cpp  pluginsmanager.cpp  pluginsmanager.h
calendar-client/src/view/: alldayeventview.cpp  draginfographicsview.cpp  graphicsview.cpp  monthgraphiview.cpp
calendar-client/src/widget/: schedulesearchview.cpp
calendar-client/src/widget/yearWidget/: yearscheduleview.cpp
